--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,13 +7,20 @@ environment:
   sdk: '>=2.19.3 <3.0.0'
 
 dependencies:
+  dio: ^5.0.3
+  envied: ^0.3.0
   flutter:
     sdk: flutter
+  freezed: ^2.3.2
+  go_router: ^6.4.1
+  riverpod: ^2.3.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.0
+  envied_generator: ^0.3.0
+  build_runner: ^2.3.3
 
 flutter:
   uses-material-design: true
