--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,10 +1,10 @@
 name: yet_another_weather_app
 description: A new Flutter project.
-publish_to: 'none'
+publish_to: "none"
 version: 0.1.0
 
 environment:
-  sdk: '>=2.19.3 <3.0.0'
+  sdk: ">=2.19.3 <3.0.0"
 
 dependencies:
   dio: ^5.0.3
@@ -13,7 +13,8 @@ dependencies:
     sdk: flutter
   freezed: ^2.3.2
   go_router: ^6.4.1
-  riverpod: ^2.3.2
+  logger: ^1.3.0
+  flutter_riverpod: ^2.3.2
 
 dev_dependencies:
   flutter_test:
