--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,8 @@ dependencies:
   go_router: ^6.4.1
   logger: ^1.3.0
   flutter_riverpod: ^2.3.2
+  equatable: ^2.0.5
+  json_annotation: ^4.8.0
 
 dev_dependencies:
   flutter_test:
@@ -22,6 +24,7 @@ dev_dependencies:
   flutter_lints: ^2.0.0
   envied_generator: ^0.3.0
   build_runner: ^2.3.3
+  json_serializable: ^6.6.0
 
 flutter:
   uses-material-design: true
