--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   flutter_riverpod: ^2.3.2
   equatable: ^2.0.5
   json_annotation: ^4.8.0
+  firebase_crashlytics: ^3.1.0
 
 dev_dependencies:
   flutter_test:
