--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   equatable: ^2.0.5
   json_annotation: ^4.8.0
   firebase_crashlytics: ^3.1.0
+  either_dart: ^0.3.0
 
 dev_dependencies:
   flutter_test:
