--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,10 +1,10 @@
 name: yet_another_weather_app
 description: A new Flutter project.
-publish_to: "none"
+publish_to: 'none'
 version: 0.1.0
 
 environment:
-  sdk: ">=2.19.3 <3.0.0"
+  sdk: '>=2.19.3 <3.0.0'
 
 dependencies:
   dio: ^5.0.3
@@ -34,3 +34,6 @@ dev_dependencies:
 flutter:
   uses-material-design: true
   generate: true
+
+  assets:
+    - lib/assets/images/
