--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,7 +14,7 @@ dependencies:
   freezed: ^2.3.2
   go_router: ^6.4.1
   logger: ^1.3.0
-  flutter_riverpod: ^2.3.2
+  flutter_riverpod: ^2.3.6
   equatable: ^2.0.5
   json_annotation: ^4.8.0
   firebase_crashlytics: ^3.1.0
@@ -30,6 +30,7 @@ dev_dependencies:
   envied_generator: ^0.3.0
   build_runner: ^2.3.3
   json_serializable: ^6.6.0
+  mocktail: ^0.3.0
 
 flutter:
   uses-material-design: true
